# sqlite-orm

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  rustfmt.toml
include/: gigachat_orm.h  message_interface_cpp.h
src/: common.rs  database.rs  debug.rs  init.rs  interface.rs  lib.rs  memory.rs  networking.rs
src/database/: sql.rs  structs.rs
src/interface/: common.rs  helper_structs.rs  networking.rs  sql.rs  urlbuilder.rs
src/networking/: gc_json.rs  helper_structs.rs  urlbuilder.rs
